# mt5-agent-skills

./: README.md  pyproject.toml
skills/mt5-analysis/: SKILL.md
skills/mt5-analysis/scripts/: analyze_trade.py
skills/mt5-connection/: SKILL.md
skills/mt5-connection/scripts/: mt5_context.py
skills/mt5-market-data/: SKILL.md
skills/mt5-market-data/references/: timeframes.md
skills/mt5-market-data/scripts/: fetch_rates.py
skills/mt5-trading/: SKILL.md
skills/mt5-trading/references/: return_codes.md
skills/mt5-trading/scripts/: close_positions.py  place_order.py
src/mt5_agent_skills/: __init__.py  client.py  core.py  registry.py
src/mt5_agent_skills/skills/: __init__.py  account.py  analysis.py  market_data.py  trading.py
tests/: __init__.py
